--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ checkout:
 dependencies:
   override:
   - git clone https://github.com/Linuxbrew/brew.git ~/.linuxbrew
+  - mkdir -p ~/.linuxbrew/Caskroom
 test:
   override:
   - ~/.linuxbrew/bin/brew cask audit ./Casks/*
