--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,8 @@ checkout:
   - chmod g-w Casks/*
 dependencies:
   override:
-  - git clone https://github.com/Linuxbrew/brew.git ~/.linuxbrew
-  - mkdir -p ~/.linuxbrew/Caskroom
+  - git clone https://github.com/Homebrew/brew.git ~/.brew
+  - mkdir -p ~/.brew/Caskroom
 test:
   override:
-  - ~/.linuxbrew/bin/brew cask audit ./Casks/*
+  - ~/.brew/bin/brew cask audit ./Casks/*
