--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,13 @@
+machine:
+  environment:
+    HOMEBREW_DEVELOPER: 'true'
+    HOMEBREW_RUBY_PATH: /opt/circleci/.rvm/rubies/default/bin/ruby
 checkout:
   post:
   - chmod g-w Casks/*
 dependencies:
   override:
+  - rvm --default use $(cat .ruby-version)
   - git clone https://github.com/Homebrew/brew.git ~/.brew
   - mkdir -p ~/.brew/Caskroom
 test:
