--- a/.prospectus.d/build
+++ b/.prospectus.d/build
@@ -1,7 +1,7 @@
-Prospectus.extra_dep('file', 'prospectus_circleci')
+Prospectus.extra_dep('file', 'prospectus_travis')
 
 item do
   noop
 
-  extend ProspectusCircleci::Build.new('halyard/homebrew-casks')
+  extend ProspectusTravis::Build.new('halyard/homebrew-casks')
 end
